src/components/Swiper/Swiper.css
@media (min-width: 640px) {
  .swiper-container {
    display: none;
  }
}

.swiper-container {
  width: 100%;
  height: 100%;
  position: relative !important;
  z-index: 0 !important;
  padding-bottom: 20px;
  overflow: hidden;
}

.swiper-slide {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  background-color: #fff;
}

.swiper-slide img {
  width: 100%;
  height: 100%;
  padding-bottom: 40px;
  display: block;
}

.swiper-pagination {
  bottom: 5px !important;
  text-align: center;
  position: absolute;
  z-index: 1;
  height: 25px;
  background-color:#fff;
  padding: 0;
}

.swiper-pagination-bullet {
  width: 15px;
  height: 4px;
  background-color: #B4BDC3;
  border-radius: 0;
  display: inline-block;
  margin: 0 15px 0 0 !important;
  cursor: pointer;
  opacity: 1;
}

.swiper-pagination-bullet-active {
  background-color: #313237;
}

